objects/Obj_11383_1__c.object
<CustomObject>
    <description>Removed description</description>
    <fields>
        <fullName>Fieldcommit1__c</fullName>
        <label>Fieldcommit1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldcommit2__c</fullName>
        <label>Fieldcommit2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestPicklist1__c</fullName>
        <label>TestPicklist1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
                <value>
                    <fullName>Value2</fullName>
                </value>
                <value>
                    <fullName>Value3</fullName>
                </value>
                <value>
                    <fullName>Value4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X12191_Field3__c</fullName>
        <label>12191_Field3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12264_Field2__c</fullName>
        <label>12264_Field2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12264__c</fullName>
        <label>12264</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Obj_11383_1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Obj_11383_1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obj_11383_1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>